Your commit message

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Chat Assistant</title>
-    <meta name="description" content="Chat with an AI powered by Llama 3.3" />
+    <meta name="description" content="Chat with an AI powered by " />
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="AI Chat Assistant" />
-    <meta property="og:description" content="Chat with an AI powered by Llama 3.3" />
+    <meta property="og:description" content="Chat with an AI powered by " />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
